--- a/inst/tutorials/Session1/LinearRegression.html
+++ b/inst/tutorials/Session1/LinearRegression.html
@@ -415,8 +415,25 @@ confint(exposure_model1)</code></pre>
 </div>
 </div>
 </div>
-<div id="section-data-preparation" class="section level2">
-<h2>Data preparation</h2>
+<div id="section-conclusion" class="section level2">
+<h2>Conclusion</h2>
+<p>We have:</p>
+<ul>
+<li>Reviewed the basics of regression analysis;</li>
+<li>Learned how to do regression analysis in R;</li>
+<li>Thought about how to measure peer exposure and exposure effects;</li>
+<li>Most importantly, we started thinking about events in networks.</li>
+</ul>
+<p>These are big steps that we have taken!</p>
+</div>
+<div id="section-further-reading" class="section level2">
+<h2>Further Reading</h2>
+<ul>
+<li>Miles, J., &amp; Shevlin, M. (2001). <em>Applying regression &amp; correlation: A guide for students and researchers</em>. SAGE. My favorite introduction to regression analysis, especially <strong>Part I: I Need To Do Regression Analysis Tomorrow</strong>.</li>
+</ul>
+</div>
+<div id="section-appendix-data-preparation" class="section level2">
+<h2>Appendix: Data preparation</h2>
 <p>As said before, calculating the exposure variables is complicated. In this section, you can see how that can be done.</p>
 <p>This is an advanced topic that you should probably only study if you start working with your own data.</p>
 <p>This tutorial uses the tidyverse approach to data wrangling (preparation). Study the book <a href="https://r4ds.had.co.nz/">R for Data Science</a> if you are not familiar with this type of R code.</p>
@@ -826,18 +843,7 @@ for (t in 1:nrow(timepoints)) {
          device = &quot;png&quot;, width = 18, height = 12, units = &quot;cm&quot;, dpi = 200)
 
 }</code></pre>
-</div>
-</div>
-<div id="section-conclusion" class="section level2">
-<h2>Conclusion</h2>
-<p>We have:</p>
-<ul>
-<li>Reviewed the basics of regression analysis;</li>
-<li>Learned how to do regression analysis in R;</li>
-<li>Thought about how to measure peer exposure and exposure effects;</li>
-<li>Most importantly, we started thinking about events in networks.</li>
-</ul>
-These are big steps that we have taken! 
+
 <script type="application/shiny-prerendered" data-context="server-start">
 library(learnr)
 library(tidyverse)
@@ -958,6 +964,7 @@ output$`tutorial-exercise-basicdata3-output` <- renderUI({
 {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85]}},"value":[{"type":"character","attributes":{},"value":["assertthat","backports","base","broom","cellranger","cli","colorspace","compiler","crayon","datasets","DBI","dbplyr","digest","dplyr","ellipsis","evaluate","fansi","farver","fastmap","forcats","fs","generics","ggplot2","glue","graphics","grDevices","grid","gtable","haven","hms","htmltools","htmlwidgets","httpuv","httr","jsonlite","knitr","labeling","later","lattice","learnr","lifecycle","lubridate","magrittr","markdown","Matrix","methods","mgcv","mime","modelr","munsell","NikitaRocks","nlme","pillar","pkgconfig","promises","purrr","R6","RColorBrewer","Rcpp","readr","readxl","reprex","rlang","rmarkdown","rprojroot","rstudioapi","rvest","scales","shiny","splines","stats","stringi","stringr","tibble","tidyr","tidyselect","tidyverse","tools","utils","vctrs","withr","xfun","xml2","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","1.2.0","4.0.3","0.7.2","1.1.0","2.2.0","2.0-0","4.0.3","1.3.4","4.0.3","1.1.0","2.0.0","0.6.27","1.0.2","0.3.1","0.14","0.4.1","2.0.3","1.0.1","0.5.0","1.5.0","0.1.0","3.3.2","1.4.2","4.0.3","4.0.3","4.0.3","0.3.0","2.3.1","0.5.3","0.5.0","1.5.2","1.5.4","1.4.2","1.7.1","1.30","0.4.2","1.1.0.1","0.20-41","0.10.1","0.2.0","1.7.9.2","2.0.1","1.1","1.2-18","4.0.3","1.8-33","0.9","0.1.8","0.5.0","0.1.0","3.1-149","1.4.7","2.0.3","1.1.1","0.3.4","2.5.0","1.1-2","1.0.6","1.4.0","1.3.1","0.3.0","0.4.8","2.5","2.0.2","0.13","0.3.6","1.1.1","1.5.0","4.0.3","4.0.3","1.5.3","1.4.0","3.0.4","1.1.2","1.1.0","1.3.0","4.0.3","4.0.3","0.3.6","2.3.0","0.19","1.3.2","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
+</div>
 </div>
 
 </div> <!-- topics -->
